# hake-2

./: .gitignore  README.md  TODO  hake2.aux  hake2.cabal  hake2.ps  mock_socket.sh  out  stack.yaml
.stack-work/install/x86_64-osx/lts-5.2/7.10.3/flag-cache/: hake2-0.1.0.0
cbits/: udp.c
src/: CVarGlobals.hs  CVarVariables.hs  Constants.hs  Globals.hs  Internal.hs  Main.hs  Quake.hs  QuakeIO.hs  QuakeIOState.hs  QuakeRef.hs  QuakeState.hs  Types.hs
src/Client/: BeamT.hs  CDLightT.hs  CEntityT.hs  CL.hs  CL.hs-boot  CLEnts.hs  CLFX.hs  CLInput.hs  CLInput.hs-boot  CLInv.hs  CLNewFX.hs  CLParse.hs  CLParse.hs-boot  CLParseShared.hs  CLPred.hs  CLShared.hs  CLSustainT.hs  CLTEnt.hs  CLTEnt.hs-boot  CLTEntGlobals.hs  CLTEntShared.hs  CLView.hs  CLightStyleT.hs  CParticleT.hs  CheatVarT.hs  CinematicsT.hs  ClientGlobals.hs  ClientInfoT.hs  ClientStateT.hs  ClientStaticT.hs  Console.hs  Console.hs-boot  ConsoleT.hs  DLightT.hs  DirtyT.hs  EntityT.hs  ExplosionT.hs  FrameT.hs  KButtonT.hs  Key.hs  (+42 more)
src/Game/: AIAdapter.hs  Adapters.hs  CModel.hs  CModelT.hs  CPlane.hs  CPlaneT.hs  CSurface.hs  CSurfaceT.hs  CVar.hs  CVarT.hs  ClientPersistant.hs  ClientPersistantT.hs  ClientRespawn.hs  ClientRespawnT.hs  Cmd.hs  Cmd.hs-boot  CmdAlias.hs  CmdAliasT.hs  CmdGlobals.hs  Edict.hs  EdictActionT.hs  EdictInfoT.hs  EdictMinMaxT.hs  EdictOtherT.hs  EdictPhysicsT.hs  EdictStatusT.hs  EdictT.hs  EdictTimingT.hs  EntBlockedAdapter.hs  EntDieAdapter.hs  EntDodgeAdapter.hs  EntInteract.hs  EntInteractAdapter.hs  EntPainAdapter.hs  EntThink.hs  EntThinkAdapter.hs  EntTouchAdapter.hs  EntUseAdapter.hs  EntityState.hs  EntityStateT.hs  (+86 more)
src/Game/Monsters/: MActor.hs  MBerserk.hs  MBerserkGlobals.hs  MBoss2.hs  MBoss2Globals.hs  MBoss3.hs  MBoss31.hs  MBoss31Globals.hs  MBoss32.hs  MBoss32Globals.hs  MBrain.hs  MBrainGlobals.hs  MChick.hs  MChickGlobals.hs  MFlash.hs  MFlipper.hs  MFlipperGlobals.hs  MFloat.hs  MFloatGlobals.hs  MFlyer.hs  MFlyerGlobals.hs  MGladiator.hs  MGladiatorGlobals.hs  MGunner.hs  MGunnerGlobals.hs  MHover.hs  MHoverGlobals.hs  MInfantry.hs  MInfantryGlobals.hs  MInsane.hs  MInsaneGlobals.hs  MMedic.hs  MMedic.hs-boot  MMedicGlobals.hs  MMutant.hs  MMutantGlobals.hs  MParasite.hs  MParasiteGlobals.hs  MPlayer.hs  MSoldier.hs  (+5 more)
src/QCommon/: CAreaT.hs  CBrushSideT.hs  CBrushT.hs  CBuf.hs  CBufShared.hs  CLeafT.hs  CM.hs  CMGlobals.hs  CNodeT.hs  CRC.hs  CVar.hs  CVar.hs-boot  CVarShared.hs  CVarVariables.hs  CmdAliasT.hs  CmdFunctionT.hs  Com.hs  Com.hs-boot  ComGlobals.hs  DPackHeaderT.hs  FS.hs  FS.hs-boot  FSConstants.hs  FSGlobals.hs  FSShared.hs  FileLinkT.hs  LumpT.hs  MD4.hs  MSG.hs  MiptexT.hs  NetAdrT.hs  NetChanT.hs  NetChannel.hs  NetChannelGlobals.hs  Netchan.hs  PMove.hs  PMoveGlobals.hs  PackFileT.hs  PackT.hs  PmlT.hs  (+9 more)
src/QCommon/QFiles/: PcxT.hs  TgaT.hs
src/QCommon/QFiles/BSP/: DAreaPortalT.hs  DAreaT.hs  DBrushSideT.hs  DBrushT.hs  DFaceT.hs  DHeaderT.hs  DLeafT.hs  DModelT.hs  DNodeT.hs  DPlaneT.hs  DVisT.hs
src/QCommon/QFiles/MD2/: DAliasFrameT.hs  DMdlT.hs  DSTVertT.hs  DTriangleT.hs
src/QCommon/QFiles/SP2/: DSprFrameT.hs  DSpriteT.hs
src/Render/: Anorms.hs  DummyRenderer.hs  GLConfigT.hs  GLFWbGlobals.hs  GLFWbRenderer.hs  GLModeT.hs  GLPolyT.hs  GLStateT.hs  GLTModeT.hs  ImageT.hs  MEdgeT.hs  MLeafT.hs  MModelT.hs  MNodeT.hs  MSurfaceT.hs  MTexInfoT.hs  MVertexT.hs  ModelT.hs  QRenderer.hs  QRenderer.hs-boot  RenderAPI.hs  RenderAPIConstants.hs  Renderer.hs  VideoMode.hs
src/Render/Basic/: BasicRenderAPI.hs  BasicRenderAPIGlobals.hs  Draw.hs  Image.hs  Model.hs  Warp.hs
src/Render/Fast/: Draw.hs  FastRenderAPI.hs  FastRenderAPIGlobals.hs  GLLightMapStateT.hs  Image.hs  Light.hs  Mesh.hs  Model.hs  Polygon.hs  Shared.hs  Surf.hs  Surf.hs-boot  Warp.hs
src/Render/OpenGL/: GLDriver.hs  GLFWbGLDriver.hs  QGLConstants.hs
src/Server/: AreaNodeT.hs  ChallengeT.hs  ClientFrameT.hs  ClientT.hs  MoveClipT.hs  SV.hs  SV.hs-boot  SVConsoleCommands.hs  SVConsoleCommands.hs-boot  SVEnts.hs  SVGame.hs  SVGlobals.hs  SVInit.hs  SVInit.hs-boot  SVMain.hs  SVMain.hs-boot  SVMainShared.hs  SVSend.hs  SVSend.hs-boot  SVUser.hs  SVUser.hs-boot  SVWorld.hs  ServerStaticT.hs  ServerT.hs  Types.hs  UCmdT.hs
src/Sound/: S.hs  SfxCacheT.hs  SfxT.hs  SoundInfoT.hs  WavInfoT.hs
src/Sys/: GLFWbKBDGlobals.hs  IN.hs  INGlobals.hs  KBD.hs  KBDGlobals.hs  LoopMsgT.hs  LoopbackT.hs  NET.hs  NETGlobals.hs  Socket.hs  Socket.hs.mock  Sys.hs  Sys.hs-boot  Timer.hs
src/Util/: Binary.hs  Lib.hs  Lib.hs-boot  Math3D.hs  QuakeFile.hs  Unsafe.hs  Vector.hs
