name:                hake2
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/ksaveljev/hake2#readme
license-file:        LICENSE
author:              Konstantin Saveljev
maintainer:          konstantin.saveljev@gmail.com
copyright:           2016 Konstantin Saveljev
category:            Games
build-type:          Simple
cabal-version:       >=1.10

executable hake2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , containers
                     , cryptohash
                     , data-binary-ieee754
                     , directory
                     , GLFW-b
                     , lens
                     , linear
                     , mtl
                     , monad-coroutine
                     , network
                     , OpenGLRaw
                     , pipes
                     , pipes-binary
                     , pipes-bytestring
                     , pipes-parse
                     , primitive
                     , random
                     , stm
                     , time
                     , vector
                     , unix-compat
                     , unordered-containers
  default-extensions:  OverloadedStrings
                     , BangPatterns
  ghc-options:         -O0 -rtsopts -Wall
  other-modules:     Client.CEntityT
                     Client.CL
                     Client.ClientInfoT
                     Client.ClientStateT
                     Client.ClientStaticT
                     Client.ConsoleT
                     Client.DLightT
                     Client.EntityT
                     Client.FrameT
                     Client.Key
                     Client.LightStyleT
                     Client.RefDefT
                     Client.VRectT
                     Client.VidDefT
                     Constants
                     Game.CVarT
                     Game.Cmd
                     Game.EntityStateT
                     Game.PMoveStateT
                     Game.PlayerStateT
                     Game.UserCmdT
                     Globals
                     QCommon.CBuf
                     QCommon.CVar
                     QCommon.CVarShared
                     QCommon.Com
                     QCommon.ComGlobals
                     QCommon.FS
                     QCommon.NetAdrT
                     QCommon.NetChanT
                     QCommon.NetChannel
                     QCommon.QCommon
                     QCommon.SizeBufT
                     QCommon.XCommandT
                     Quake
                     QuakeState
                     Render.DummyRenderer
                     Render.RenderAPI
                     Server.SVMain
                     Sys.NET
                     Sys.Timer
                     Types
                     Util.Lib
                     Client.KeyConstants
                     Client.KeyGlobals
                     Game.CPlaneT
                     Game.CmdAliasT
                     Game.CmdGlobals
                     QCommon.CBufShared
                     QCommon.CVarVariables
                     QCommon.CmdFunctionT
                     QCommon.DPackHeaderT
                     QCommon.FSGlobals
                     QCommon.FSShared
                     QCommon.FileLinkT
                     QCommon.MSG
                     QCommon.PackFileT
                     QCommon.PackT
                     QCommon.SZ
                     QCommon.SearchPathT
                     QCommon.Shared
                     Util.Binary
                     Util.Math3D