name:                hake2
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/ksaveljev/hake2#readme
license-file:        LICENSE
author:              Konstantin Saveljev
maintainer:          konstantin.saveljev@gmail.com
copyright:           2016 Konstantin Saveljev
category:            Games
build-type:          Simple
cabal-version:       >=1.10

executable hake2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , containers
                     , cryptohash
                     , data-binary-ieee754
                     , directory
                     , filepath
                     , GLFW-b
                     , lens
                     , linear
                     , mmap
                     , mtl
                     , monad-coroutine
                     , network
                     , OpenGLRaw
                     , pipes
                     , pipes-binary
                     , pipes-bytestring
                     , pipes-parse
                     , primitive
                     , random
                     , stm
                     , time
                     , vector
                     , unix-compat
                     , unordered-containers
  default-extensions:  OverloadedStrings
                     , BangPatterns
  ghc-options:         -O0 -rtsopts -Wall
  other-modules:       CVarVariables
                     , Client.BeamT
                     , Client.CDLightT
                     , Client.CEntityT
                     , Client.CL
                     , Client.CLEnts
                     , Client.CLFX
                     , Client.CLInput
                     , Client.CLInv
                     , Client.CLNewFX
                     , Client.CLParse
                     , Client.CLPred
                     , Client.CLSustainT
                     , Client.CLTEnt
                     , Client.CLTEntGlobals
                     , Client.CLView
                     , Client.CLightStyleT
                     , Client.CParticleT
                     , Client.CheatVarT
                     , Client.CinematicsT
                     , Client.ClientGlobals
                     , Client.ClientInfoT
                     , Client.ClientStateT
                     , Client.ClientStaticT
                     , Client.Console
                     , Client.ConsoleT
                     , Client.DLightT
                     , Client.DirtyT
                     , Client.EntityT
                     , Client.ExplosionT
                     , Client.FrameT
                     , Client.KButtonT
                     , Client.Key
                     , Client.KeyConstants
                     , Client.KeyFuncT
                     , Client.KeyGlobals
                     , Client.LaserT
                     , Client.LightStyleT
                     , Client.M
                     , Client.Menu
                     , Client.MenuCommonS
                     , Client.MenuFrameworkS
                     , Client.MenuGlobals
                     , Client.MenuItem
                     , Client.MenuLayerT
                     , Client.ParticleTGlobals
                     , Client.RefDefT
                     , Client.RefExportT
                     , Client.SCR
                     , Client.SCRGlobals
                     , Client.V
                     , Client.VGlobals
                     , Client.VID
                     , Client.VIDGlobals
                     , Client.VRectT
                     , Client.VidDefT
                     , Client.VidModeT
                     , Client.VidModes
                     , Constants
                     , Game.Adapters
                     , Game.CModelT
                     , Game.CPlaneT
                     , Game.CSurfaceT
                     , Game.CVarT
                     , Game.ClientPersistantT
                     , Game.ClientRespawnT
                     , Game.Cmd
                     , Game.CmdAliasT
                     , Game.CmdGlobals
                     , Game.EdictT
                     , Game.EntityStateT
                     , Game.GClientT
                     , Game.GItemArmorT
                     , Game.GItemT
                     , Game.GameAI
                     , Game.GameBase
                     , Game.GameBaseGlobals
                     , Game.GameChase
                     , Game.GameCombat
                     , Game.GameFunc
                     , Game.GameImportT
                     , Game.GameItemList
                     , Game.GameItems
                     , Game.GameItemsGlobals
                     , Game.GameLocalsT
                     , Game.GameMisc
                     , Game.GameSVCmds
                     , Game.GameSave
                     , Game.GameUtil
                     , Game.GameWeapon
                     , Game.Info
                     , Game.LevelLocalsT
                     , Game.LinkT
                     , Game.MFrameT
                     , Game.MMoveT
                     , Game.MapSurfaceT
                     , Game.Monster
                     , Game.MonsterInfoT
                     , Game.Monsters.MBerserkGlobals
                     , Game.Monsters.MBoss2Globals
                     , Game.Monsters.MBoss31Globals
                     , Game.Monsters.MBoss32Globals
                     , Game.Monsters.MBrainGlobals
                     , Game.Monsters.MChickGlobals
                     , Game.Monsters.MFlash
                     , Game.Monsters.MFlipperGlobals
                     , Game.Monsters.MFloatGlobals
                     , Game.Monsters.MFlyerGlobals
                     , Game.Monsters.MGladiatorGlobals
                     , Game.Monsters.MGunnerGlobals
                     , Game.Monsters.MHoverGlobals
                     , Game.Monsters.MInfantryGlobals
                     , Game.Monsters.MInsaneGlobals
                     , Game.Monsters.MMedicGlobals
                     , Game.Monsters.MMutantGlobals
                     , Game.Monsters.MParasiteGlobals
                     , Game.Monsters.MPlayer
                     , Game.Monsters.MSoldierGlobals
                     , Game.Monsters.MSuperTankGlobals
                     , Game.Monsters.MTankGlobals
                     , Game.MoveInfoT
                     , Game.PMoveStateT
                     , Game.PMoveT
                     , Game.PlayerClient
                     , Game.PlayerHud
                     , Game.PlayerStateT
                     , Game.PlayerTrail
                     , Game.PlayerTrailGlobals
                     , Game.PlayerView
                     , Game.PlayerWeapon
                     , Game.PushedT
                     , Game.SpawnTempT
                     , Game.TraceT
                     , Game.UserCmdT
                     , Globals
                     , Internal
                     , QCommon.CAreaT
                     , QCommon.CBrushSideT
                     , QCommon.CBrushT
                     , QCommon.CBuf
                     , QCommon.CLeafT
                     , QCommon.CM
                     , QCommon.CMGlobals
                     , QCommon.CNodeT
                     , QCommon.CVar
                     , QCommon.CmdFunctionT
                     , QCommon.Com
                     , QCommon.ComGlobals
                     , QCommon.DPackHeaderT
                     , QCommon.FS
                     , QCommon.FSConstants
                     , QCommon.FSGlobals
                     , QCommon.FileLinkT
                     , QCommon.LumpT
                     , QCommon.MD4
                     , QCommon.MSG
                     , QCommon.NetAdrT
                     , QCommon.NetChanT
                     , QCommon.NetChannel
                     , QCommon.NetChannelGlobals
                     , QCommon.PMove
                     , QCommon.PMoveGlobals
                     , QCommon.PackFileT
                     , QCommon.PackT
                     , QCommon.PmlT
                     , QCommon.QCommon
                     , QCommon.QFiles.BSP.DAreaPortalT
                     , QCommon.QFiles.BSP.DAreaT
                     , QCommon.QFiles.BSP.DBrushSideT
                     , QCommon.QFiles.BSP.DBrushT
                     , QCommon.QFiles.BSP.DHeaderT
                     , QCommon.QFiles.BSP.DLeafT
                     , QCommon.QFiles.BSP.DModelT
                     , QCommon.QFiles.BSP.DNodeT
                     , QCommon.QFiles.BSP.DPlaneT
                     , QCommon.QFiles.BSP.DVisT
                     , QCommon.QFiles.MD2.DAliasFrameT
                     , QCommon.QFiles.MD2.DMdlT
                     , QCommon.QFiles.MD2.DSTVertT
                     , QCommon.QFiles.MD2.DTriangleT
                     , QCommon.QFiles.SP2.DSprFrameT
                     , QCommon.QFiles.SP2.DSpriteT
                     , QCommon.SZ
                     , QCommon.SearchPathT
                     , QCommon.SizeBufT
                     , QCommon.TexInfoT
                     , QCommon.XCommandT
                     , Quake
                     , QuakeState
                     , Render.Basic.BasicRenderAPIGlobals
                     , Render.DummyRenderer
                     , Render.Fast.FastRenderAPIGlobals
                     , Render.Fast.GLLightMapStateT
                     , Render.GLConfigT
                     , Render.GLFWbGlobals
                     , Render.GLPolyT
                     , Render.GLStateT
                     , Render.ImageT
                     , Render.MEdgeT
                     , Render.MLeafT
                     , Render.MModelT
                     , Render.MNodeT
                     , Render.MSurfaceT
                     , Render.MTexInfoT
                     , Render.MVertexT
                     , Render.ModelT
                     , Render.OpenGL.QGLConstants
                     , Render.QRenderer
                     , Render.RenderAPI
                     , Render.RenderAPIConstants
                     , Render.Renderer
                     , Render.VideoMode
                     , Server.AreaNodeT
                     , Server.ChallengeT
                     , Server.ClientFrameT
                     , Server.ClientT
                     , Server.MoveClipT
                     , Server.SV
                     , Server.SVConsoleCommands
                     , Server.SVEnts
                     , Server.SVGame
                     , Server.SVGlobals
                     , Server.SVInit
                     , Server.SVMain
                     , Server.SVSend
                     , Server.SVUser
                     , Server.SVWorld
                     , Server.ServerStaticT
                     , Server.ServerT
                     , Sound.S
                     , Sound.SfxCacheT
                     , Sound.SfxT
                     , Sys.IN
                     , Sys.INGlobals
                     , Sys.KBD
                     , Sys.KBDGlobals
                     , Sys.LoopMsgT
                     , Sys.LoopbackT
                     , Sys.NET
                     , Sys.NETGlobals
                     , Sys.Socket
                     , Sys.Sys
                     , Sys.Timer
                     , Util.Binary
                     , Util.Lib
                     , Util.Math3D
                     , Util.QuakeFile
