name:                hake2
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/ksaveljev/hake2#readme
license-file:        LICENSE
author:              Konstantin Saveljev
maintainer:          konstantin.saveljev@gmail.com
copyright:           2016 Konstantin Saveljev
category:            Games
build-type:          Simple
cabal-version:       >=1.10

executable hake2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , containers
                     , cryptohash
                     , data-binary-ieee754
                     , directory
                     , filemanip
                     , filepath
                     , GLFW-b
                     , lens
                     , linear
                     , mtl
                     , monad-coroutine
                     , network
                     , OpenGLRaw
                     , pipes
                     , pipes-binary
                     , pipes-bytestring
                     , pipes-parse
                     , primitive
                     , random
                     , stm
                     , time
                     , vector
                     , unix-compat
                     , unordered-containers
  default-extensions:  OverloadedStrings
                     , BangPatterns
  ghc-options:         -O0 -rtsopts -Wall
  other-modules:     Client.CEntityT
                     Client.CL
                     Client.ClientInfoT
                     Client.ClientStateT
                     Client.ClientStaticT
                     Client.ConsoleT
                     Client.DLightT
                     Client.EntityT
                     Client.FrameT
                     Client.Key
                     Client.LightStyleT
                     Client.RefDefT
                     Client.VRectT
                     Client.VidDefT
                     Constants
                     Game.CVarT
                     Game.Cmd
                     Game.EntityStateT
                     Game.PMoveStateT
                     Game.PlayerStateT
                     Game.UserCmdT
                     Globals
                     QCommon.CBuf
                     QCommon.CVar
                     QCommon.Com
                     QCommon.ComGlobals
                     QCommon.FS
                     QCommon.NetAdrT
                     QCommon.NetChanT
                     QCommon.NetChannel
                     QCommon.QCommon
                     QCommon.SizeBufT
                     QCommon.XCommandT
                     Quake
                     QuakeState
                     Render.DummyRenderer
                     Render.RenderAPI
                     Server.SVMain
                     Sys.NET
                     Sys.Timer
                     Types
                     Util.Lib
                     Client.KeyConstants
                     Client.KeyGlobals
                     Game.CPlaneT
                     Game.CmdAliasT
                     Game.CmdGlobals
                     QCommon.CBufShared
                     QCommon.CVarVariables
                     QCommon.CmdFunctionT
                     QCommon.DPackHeaderT
                     QCommon.FSGlobals
                     QCommon.FSShared
                     QCommon.FileLinkT
                     QCommon.MSG
                     QCommon.PackFileT
                     QCommon.PackT
                     QCommon.SZ
                     QCommon.SearchPathT
                     Util.Binary
                     Util.Math3D
                     Client.BeamT
                     Client.CDLightT
                     Client.CLEnts
                     Client.CLFX
                     Client.CLInput
                     Client.CLInv
                     Client.CLNewFX
                     Client.CLParse
                     Client.CLParseShared
                     Client.CLPred
                     Client.CLSustainT
                     Client.CLTEnt
                     Client.CLTEntGlobals
                     Client.CLView
                     Client.CLightStyleT
                     Client.CParticleT
                     Client.CheatVarT
                     Client.CinematicsT
                     Client.ClientGlobals
                     Client.Console
                     Client.DirtyT
                     Client.ExplosionT
                     Client.KButtonT
                     Client.LaserT
                     Client.M
                     Client.Menu
                     Client.MenuActionS
                     Client.MenuCommonS
                     Client.MenuFieldS
                     Client.MenuFrameworkS
                     Client.MenuGlobals
                     Client.MenuLayerT
                     Client.MenuListS
                     Client.MenuSeparatorS
                     Client.MenuSliderS
                     Client.ParticleTGlobals
                     Client.RefExportT
                     Client.SCR
                     Client.SCRGlobals
                     Client.SCRShared
                     Client.V
                     Client.VGlobals
                     Client.VID
                     Client.VIDGlobals
                     Client.VShared
                     Client.VidModeT
                     Client.VidModes
                     Game.CModelT
                     Game.CSurfaceT
                     Game.ClientPersistantT
                     Game.ClientRespawnT
                     Game.EdictT
                     Game.GClientT
                     Game.GItemArmorT
                     Game.GItemT
                     Game.GameAI
                     Game.GameBase
                     Game.GameBaseGlobals
                     Game.GameCombat
                     Game.GameFunc
                     Game.GameImportT
                     Game.GameItems
                     Game.GameItemsGlobals
                     Game.GameItemsList
                     Game.GameLocalsT
                     Game.GameMisc
                     Game.GameSVCmds
                     Game.GameSave
                     Game.GameSpawn
                     Game.GameTarget
                     Game.GameTrigger
                     Game.GameTurret
                     Game.GameUtil
                     Game.GameWeapon
                     Game.Info
                     Game.LevelLocalsT
                     Game.LinkT
                     Game.MapSurfaceT
                     Game.MonsterInfoT
                     Game.Monsters.MFlash
                     Game.MoveInfoT
                     Game.PMoveT
                     Game.PlayerClient
                     Game.PlayerTrail
                     Game.PlayerTrailGlobals
                     Game.PlayerView
                     Game.PushedT
                     Game.SpawnT
                     Game.SpawnTempT
                     Game.TraceT
                     QCommon.CAreaT
                     QCommon.CBrushSideT
                     QCommon.CBrushT
                     QCommon.CLeafT
                     QCommon.CM
                     QCommon.CMGlobals
                     QCommon.CNodeT
                     QCommon.LumpT
                     QCommon.MD4
                     QCommon.MiptexT
                     QCommon.NetChannelGlobals
                     QCommon.PMove
                     QCommon.PMoveGlobals
                     QCommon.PmlT
                     QCommon.QFiles.BSP.DAreaPortalT
                     QCommon.QFiles.BSP.DAreaT
                     QCommon.QFiles.BSP.DBrushSideT
                     QCommon.QFiles.BSP.DBrushT
                     QCommon.QFiles.BSP.DFaceT
                     QCommon.QFiles.BSP.DHeaderT
                     QCommon.QFiles.BSP.DLeafT
                     QCommon.QFiles.BSP.DModelT
                     QCommon.QFiles.BSP.DNodeT
                     QCommon.QFiles.BSP.DPlaneT
                     QCommon.QFiles.BSP.DVisT
                     QCommon.QFiles.MD2.DAliasFrameT
                     QCommon.QFiles.MD2.DMdlT
                     QCommon.QFiles.MD2.DSTVertT
                     QCommon.QFiles.MD2.DTriangleT
                     QCommon.QFiles.PcxT
                     QCommon.QFiles.SP2.DSprFrameT
                     QCommon.QFiles.SP2.DSpriteT
                     QCommon.QFiles.TgaT
                     QCommon.TexInfoT
                     QuakeRef
                     Render.Anorms
                     Render.Basic.BasicRenderAPI
                     Render.Fast.Draw
                     Render.Fast.FastRenderAPI
                     Render.Fast.FastRenderAPIGlobals
                     Render.Fast.GLLightMapStateT
                     Render.Fast.Image
                     Render.Fast.Light
                     Render.Fast.Mesh
                     Render.Fast.Model
                     Render.Fast.Polygon
                     Render.Fast.Shared
                     Render.Fast.Surf
                     Render.Fast.Warp
                     Render.GLConfigT
                     Render.GLFWbRenderer
                     Render.GLModeT
                     Render.GLPolyT
                     Render.GLStateT
                     Render.GLTModeT
                     Render.ImageT
                     Render.MEdgeT
                     Render.MLeafT
                     Render.MModelT
                     Render.MNodeT
                     Render.MSurfaceT
                     Render.MTexInfoT
                     Render.MVertexT
                     Render.ModelT
                     Render.OpenGL.GLDriver
                     Render.OpenGL.GLFWbGLDriver
                     Render.QRenderer
                     Render.Renderer
                     Server.AreaNodeT
                     Server.ChallengeT
                     Server.ClientFrameT
                     Server.ClientT
                     Server.MoveClipT
                     Server.SV
                     Server.SVConsoleCommands
                     Server.SVEnts
                     Server.SVGame
                     Server.SVGlobals
                     Server.SVInit
                     Server.SVSend
                     Server.SVUser
                     Server.SVWorld
                     Server.ServerStaticT
                     Server.ServerT
                     Server.UCmdT
                     Sound.S
                     Sys.IN
                     Sys.INGlobals
                     Sys.KBD
                     Sys.KBDGlobals
                     Sys.LoopMsgT
                     Sys.LoopbackT
                     Sys.NETGlobals
                     Sys.Socket
                     Sys.Sys
                     Util.QuakeFile
                     Util.Unsafe
                     Render.GLFWbGlobals
                     Client.CLTEntShared
                     Client.KeyFuncT
                     Game.Monsters.MBerserkGlobals
                     Game.Monsters.MBoss2Globals
                     Game.Monsters.MBoss31Globals
                     Game.Monsters.MBoss32Globals
                     Game.Monsters.MBrainGlobals
                     Game.Monsters.MChickGlobals
                     Game.Monsters.MFlipperGlobals
                     Game.Monsters.MFloatGlobals
                     Game.Monsters.MFlyerGlobals
                     Game.Monsters.MGladiatorGlobals
                     Game.Monsters.MGunnerGlobals
                     Game.Monsters.MHoverGlobals
                     Game.Monsters.MInfantryGlobals
                     Game.Monsters.MInsaneGlobals
                     Game.Monsters.MMedicGlobals
                     Game.Monsters.MMutantGlobals
                     Game.Monsters.MParasiteGlobals
                     Game.Monsters.MSoldierGlobals
                     Game.Monsters.MSuperTankGlobals
                     Game.Monsters.MTankGlobals
                     Game.MMoveT
                     Game.Monsters.MActor
                     Game.Monsters.MBerserk
                     Game.Monsters.MBoss2
                     Game.Monsters.MBoss3
                     Game.Monsters.MBoss31
                     Game.Monsters.MBrain
                     Game.Monsters.MChick
                     Game.Monsters.MFlipper
                     Game.Monsters.MFloat
                     Game.Monsters.MFlyer
                     Game.Monsters.MGladiator
                     Game.Monsters.MGunner
                     Game.Monsters.MHover
                     Game.Monsters.MInfantry
                     Game.Monsters.MInsane
                     Game.Monsters.MMedic
                     Game.Monsters.MMutant
                     Game.Monsters.MParasite
                     Game.Monsters.MSoldier
                     Game.Monsters.MSuperTank
                     Game.Monsters.MTank
                     Game.Monster
                     Game.PlayerWeapon
                     Game.MFrameT
